--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "reliv/rcm-call-to-action-box",
+  "name": "rcm/call-to-action-box",
   "description": "Provides call to action boxes for the Reliv Content Manager",
   "license": "BSD-3-Clause",
   "keywords": [
