--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "reliv/rcm": "0.*"
+    "rcm/core": "0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
